--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
     "axios": "^1.13.2",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "form-data": "^4.0.5",
+    "mongoose": "^9.0.0",
     "multer": "^2.0.2",
     "nodemon": "^3.1.11",
     "yup": "^1.7.1"
