--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "form-data": "^4.0.5",
     "mongoose": "^9.0.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.11",
     "nodemon": "^3.1.11",
     "qrcode": "^1.5.4",
     "yup": "^1.7.1"
