--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "nodemailer": "^7.0.11",
     "nodemon": "^3.1.11",
     "qrcode": "^1.5.4",
-    "uuid": "^13.0.0",
-    "ws": "^8.18.3",
+    "socket.io": "^4.8.1",
     "yup": "^1.7.1"
   },
   "devDependencies": {
