--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "ShareGuy Backend Server",
+  "main": "server.js",
   "scripts": {
     "type": "module",
     "dev": "nodemon --inspect src/server.js",
